# aicleaner_v3

./: .bumpversion.cfg  .claude_fixed_config.json  .claude_minimal_config.json  .claude_no_cwd_config.json  .claude_settings.json  .claude_working.json  .claude_working_config.json  .claude_wsl_config.json  .claude_wsl_minimal.json  .dockerignore  .gitignore  .gitmodules  .mcp.json  14_prompts_enhancement.diff  ACT_AGENT_FINAL_REPORT.md  ADDON_TROUBLESHOOTING.md  ADDON_VERIFICATION_COMPLETE.md  AI_COLLABORATION_FRAMEWORK.md  AUTONOMOUS_REVIEW_SESSION_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CLEANUP_REPORT.md  COMPREHENSIVE_CODEBASE_REVIEW_SUMMARY.md  CONFIGURATION_SECURITY_ANALYSIS.md  CONTRIBUTING.md  CRITICAL_FIXES_APPLIED.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_README.md  DESIGN.md  DOCKER_OPTIMIZATION.md  DOCS.md  DOCUMENTATION_ANALYSIS.md  Dockerfile  Dockerfile.test  GEMINI_AUDIT_COMPLETE_FINDINGS.md  GEMINI_CLI_COLLABORATION_GUIDE.md  GEMINI_MCP_PERMANENT_SETUP.md  GEMINI_MCP_SETUP_STATUS.md  GEMINI_REVIEW_HIGH_PRIORITY_FIXES.md  GEMINI_REVIEW_QUEUE.md  (+169 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
FRESH START AI CLEANER/: claude.md  config.example.yaml
addon-repository/: INSTALLATION_TEST.md  PHASE_3_EXECUTION_GUIDE.md  repository.json
ai_cleaner/: ARCHITECTURE.md  Dockerfile  main.py  requirements.txt  run.sh
aicleaner/: .env.example  DEPLOYMENT_STATUS.md  INSTALL.md  MANIFEST.in  README.md  config.example.yaml  config.minimal.yaml  config.production.yaml  deployment_check.py  pyproject.toml  requirements.txt  setup.py  test_main.py  verify_structure.py
aicleaner/src/: __init__.py  main.py
aicleaner/src/config/: __init__.py  loader.py  schema.py
aicleaner/src/core/: __init__.py  health.py  orchestrator.py
aicleaner/src/providers/: __init__.py  base_provider.py  gemini_provider.py
aicleaner/tests/: __init__.py
aicleaner/tests/integration/: __init__.py
aicleaner/tests/unit/: __init__.py
aicleaner_original/: README.md  requirements.txt
aicleaner_v3/: .dockerignore  CHANGELOG.md  Dockerfile  Dockerfile.minimal  Dockerfile.ollama  README.md  config.yaml  config_mapping_analysis.py  docker-compose.ha-testing.yml  repository.json  requirements.txt
config/: amd_optimization.yaml
core/: ai_provider.py  config.default.yaml  config_bridge.py  config_loader.py  mqtt_service.py  service.py  state_manager.py  system_monitor.py
development/: config.yaml  package.json  requirements-core.txt
docs/: CONFIGURATION.md  CONTRIBUTING.md  INSTALLATION.md  PLAN.md  QUICK_START.md  TROUBLESHOOTING.md  openapi.yaml
enhancement_logs/: 01_PHASE_1A_CONFIGURATION_CONSOLIDATION_100.md_advanced_enhancement_session.json  02_PHASE_1B_CONFIGURATION_MIGRATION_100.md_advanced_enhancement_session.json  03_PHASE_1C_CONFIGURATION_TESTING_100.md_advanced_enhancement_session.json  04_PHASE_2A_AI_MODEL_OPTIMIZATION_100.md_advanced_enhancement_session.json  05_PHASE_2B_RESPONSE_QUALITY_100.md_advanced_enhancement_session.json  06_PHASE_2C_AI_PERFORMANCE_MONITORING_100.md_advanced_enhancement_session.json  07_PHASE_3A_DEVICE_DETECTION_100.md_advanced_enhancement_session.json  08_PHASE_3B_ZONE_CONFIGURATION_100.md_advanced_enhancement_session.json  09_PHASE_3C_SECURITY_AUDIT_100.md_advanced_enhancement_session.json  10_PHASE_4A_HA_INTEGRATION_100.md_advanced_enhancement_session.json  10_PHASE_4A_HA_INTEGRATION_100.md_production_enhancement.json  11_PHASE_4B_MQTT_DISCOVERY_100.md_advanced_enhancement_session.json
enterprise_code_backup/: config.yaml  docker-compose.dev.yml  start_aicleaner.py
finalized prompts/: 05_PHASE_2B_RESPONSE_QUALITY_100.md  13_PHASE_5A_PERFORMANCE_OPTIMIZATION_100.md  14_PHASE_5B_RESOURCE_MANAGEMENT_100.md  15_PHASE_5C_PRODUCTION_DEPLOYMENT_100.md  README.md
monitoring/: prometheus.yml
prompt_backups/: 03_PHASE_1C_CONFIGURATION_TESTING_100_20250715_204009_backup.md  06_PHASE_2C_AI_PERFORMANCE_MONITORING_100_20250715_204037_backup.md  08_PHASE_3B_ZONE_CONFIGURATION_100_20250715_204054_backup.md  09_PHASE_3C_SECURITY_AUDIT_100_20250715_204104_backup.md  10_PHASE_4A_HA_INTEGRATION_100_20250715_203214_backup.md  10_PHASE_4A_HA_INTEGRATION_100_20250715_204115_backup.md  11_PHASE_4B_MQTT_DISCOVERY_100_20250715_204124_backup.md
scripts/: build.sh  deployment_validator.py  install-ollama.sh  installer_helpers.py  migrate_ha_integration.py  release_preparation.py  validate.sh  validate_addon_config.py  validate_ai_providers.py  validate_performance.py  version_manager.py
src/: app_config.default.yaml  config_mapper.py  error_handler.py  intelligent_router.py  web_ui.py
supervisor_mock_config/: index.html  info
test-scripts/: mock_ha_api.py
testing/: README.md  __init__.py  run_tests.py  test_framework_demo.py  test_integration_ha.py  test_performance.py  test_security.py
testing_env/: pyvenv.cfg
tests/: __init__.py  config_flow_test.py  quick_test.py
www/: aicleaner-card-editor.js  aicleaner-card.js
(+707 files in other folders)
